--- a/index.html
+++ b/index.html
@@ -3,29 +3,43 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Algoritmos Tarea #1</title>
+    <title>Algoritmos Foro #2</title>
     <link rel="stylesheet" href="./css/styles.css">
 </head>
 <body>
     <header>
         <h1>Algoritmos y Estructuras de Datos</h1>
-        <p>Menu Principal Evaluación #1</p>
+        <p>Actividad Foro #2: Gestor de notas</p>
         <p class="hashtag">#ProgramaPUMA</p>
     </header>
 
     <content>
         <div class="units-grid">
             <section class="unit-card">
-                <h2>Evaluación #2</h2>
-                <ul class="lessons-menu">
-                    <li>
-                        <a href="./pages/ejercicio1.html" class="lesson-link">
-                            Ejercicio #1
-                        </a>
-                    </li>
-                </ul>
+                <div class="title-row">
+                    <h2>NOTAS</h2>
+                    <button id="newNote" title="Nueva Nota">+</button>
+                </div>
+                <div id="notes">
+                    <!--Nota Plantilla
+                    <section class="note-cont">
+                        <div class="note-header">
+                            <h3>Titulo de Nota:</h3>
+                            <div class="menu-container">
+                                <button data-id="123" class="btnOptions">⋮</button>
+                                <div class="dropdown">
+                                    <button>Editar</button>
+                                    <button>Eliminar</button>
+                                </div>
+                            </div>
+                        </div>
+                        <p>Lorem ipsum dolor sit amet </p>
+                    </section>-->
+                </div>
             </section>
         </div>
     </content>
+
+    <script src="./js/app.js"></script>
 </body>
 </html>
